# mc-yatzy

./: Cargo.toml
src/: distr_worker.rs  game_worker.rs  hand_worker.rs  main.rs  play_worker.rs  weight_worker.rs
src/dices/: mod.rs
src/game_box/: mod.rs  rules.rs
src/score_box/: mod.rs  rules.rs
src/utils/: mod.rs
