[package]
name = "yatzy"
version = "0.2.3"
edition = "2021"
authors = ["Peter Steneld"]
description = "Utility to statistically learn best actions in the game of Yatzy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1.8.0"
clap = { version = "4", features = ["derive"] }
num-format = "0.4.4"
colored = "2"
rust-tree-map = { git = "https://github.com/gostonefire/rust-tree-map.git", version = "0" }
chrono = "0.4.31"
