[package]
name = "yatzy"
version = "0.4.14"
edition = "2021"
authors = ["Peter Steneld"]
description = "Utility to statistically learn best actions in the game of Yatzy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1.8"
clap = { version = "4", features = ["derive"] }
num-format = "0.4"
colored = "2"
chrono = "0.4"
